--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "youtube-player-screenshot",
-  "version": "0.1.0",
-  "description": "Capture a YouTube player screenshot as a PNG file and, optionally, generate markdown code for it.",
+  "version": "0.1.1",
+  "description": "Capture YouTube player screenshot and, optionally, generate markdown code for it.",
   "engines": {
-    "node": ">=10.17.0"
+    "node": ">=10.23.2"
   },
   "bin": {
     "youtube-player-screenshot": "./bin/youtube-player-screenshot.js"
   },
   "main": "build/index.js",
   "files": [
+    "bin/",
     "build/",
+    "package.json",
     "LICENCE",
     "README.md"
   ],
@@ -18,8 +20,8 @@
     "@sindresorhus/slugify": "^1.1.0",
     "chalk": "^4.1.0",
     "clipboardy": "^2.3.0",
-    "commander": "^6.2.1",
-    "puppeteer": "^5.5.0"
+    "commander": "^7.0.0",
+    "puppeteer": "^7.1.0"
   },
   "scripts": {
     "start": "node build/index.js",
@@ -37,10 +39,10 @@
     "png"
   ],
   "devDependencies": {
-    "@types/node": "^14.14.13",
-    "@types/puppeteer": "^5.4.2",
-    "npm-check-updates": "^10.2.5",
-    "typescript": "^4.1.3"
+    "@types/node": "^14.14.27",
+    "@types/puppeteer": "^5.4.3",
+    "npm-check-updates": "^11.1.1",
+    "typescript": "^4.1.5"
   },
   "repository": {
     "type": "git",
