--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youtube-player-screenshot",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Capture YouTube player screenshot and, optionally, generate markdown code for it.",
   "engines": {
     "node": ">=10.23.2"
@@ -18,16 +18,16 @@
   ],
   "dependencies": {
     "@sindresorhus/slugify": "^1.1.0",
-    "chalk": "^4.1.0",
+    "chalk": "^4.1.1",
     "clipboardy": "^2.3.0",
-    "commander": "^7.0.0",
-    "puppeteer": "^7.1.0"
+    "commander": "^7.2.0",
+    "puppeteer": "^9.1.1"
   },
   "scripts": {
     "code": "tsc -w",
     "build": "rm -fr build/*; tsc",
     "prepublishOnly": "npm run build",
-    "ncu": "ncu -u"
+    "ncu": "ncu -u -x @sindresorhus/slugify"
   },
   "author": "Sun Knudsen <hello@sunknudsen.com>",
   "license": "MIT",
@@ -39,10 +39,10 @@
     "png"
   ],
   "devDependencies": {
-    "@types/node": "^14.14.27",
+    "@types/node": "^15.0.2",
     "@types/puppeteer": "^5.4.3",
-    "npm-check-updates": "^11.1.1",
-    "typescript": "^4.1.5"
+    "npm-check-updates": "^11.5.10",
+    "typescript": "^4.2.4"
   },
   "repository": {
     "type": "git",
