--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "module": "commonjs",
+    "module": "ES2020",
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "target": "es2017",
