--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "youtube-player-screenshot",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Capture YouTube player screenshot and, optionally, generate markdown code for it.",
   "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+    "node": ">=14.16"
   },
   "bin": {
     "youtube-player-screenshot": "./bin/youtube-player-screenshot.js"
@@ -22,7 +22,7 @@
     "chalk": "^5.1.2",
     "clipboardy": "^3.0.0",
     "commander": "^9.4.1",
-    "puppeteer": "^19.2.0"
+    "puppeteer": "^19.2.2"
   },
   "scripts": {
     "code": "tsc -w",
@@ -40,7 +40,7 @@
     "png"
   ],
   "devDependencies": {
-    "@types/node": "^18.11.8",
+    "@types/node": "^18.11.9",
     "@types/puppeteer": "^5.4.7",
     "npm-check-updates": "^16.3.16",
     "typescript": "^4.8.4"
