--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "module": "ES2020",
-    "resolveJsonModule": true,
     "esModuleInterop": true,
-    "target": "es2017",
+    "module": "Node16",
+    "moduleResolution": "Node16",
     "noImplicitAny": true,
-    "moduleResolution": "node",
-    "sourceMap": true,
     "outDir": "build",
-    "rootDir": "src"
+    "resolveJsonModule": true,
+    "rootDir": "src",
+    "sourceMap": true,
+    "target": "ES2020"
   },
   "include": ["./src/**/*"]
 }
